# text-to-png

./: Cargo.toml  README.md  cliff.toml  prepare.sh  release.toml  rustfmt.toml  test.txt
src/: main.rs
text-to-png/: Cargo.toml  README-COPY.md
text-to-png-cli/: Cargo.toml  README.md
text-to-png-cli/src/: bin.rs
text-to-png/benches/: render_bench_100pt.rs
text-to-png/src/: colors.rs  lib.rs
text-to-png/tests/: render_error_tests.rs  render_tests.rs
text-to-png/tests/resources/: CaviarDreams.ttc
