[package]
name = "text-to-png"
version = "0.1.1"
edition = "2021"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple way to render text to a png image with basic options"
readme = "README.md"
repository = "https://github.com/RookAndPawn/text-to-png"
keywords = ["text", "font", "rendering", "png", "svg"]
categories = ["encoding", "game-development", "text-processing", "visualization"]

[lib]
name = "text_to_png"
path = "src/lib.rs"

[dependencies]
lazy_static="1.4.0"
fontdb="0.7.0"
usvg="0.19.0"
resvg={version = "0.19.0", default-features = false, features = ["text"] }
tiny-skia="0.6.1"
xml-rs="0.8.4"
derive-new="0.5.9"
siphasher="0.3.7"
thiserror="1"
png="0.17.2"

[dev-dependencies]
float-cmp="0.9.0"
image = "0.20"
lcs-image-diff = { version = "0.1", default-features = false }